--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
 <body>
 
     <form class="w-75 mx-auto">
-        <p class="mt-3">名前</p>
+        <p class="mt-3">購入を検討している商品のURL - 購入を検討している商品のURLの添付をお願いいたします。
+            （amazonや楽天などで販売されている商品のリンクの添付をお願いいたします。）</p>
         <div>
-            <input class="form-control w-100 mt-1" name="name" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="url" placeholder="" required>
         </div>
-        <p class="mt-3">腕立て</p>
+        <p class="mt-3">購入を検討している商品の金額を入力してください - カンマ入れずに入力をお願い致します。（半角数字, 例：50000）</p>
         <div>
-            <input class="form-control w-100 mt-1" name="udetate" required>
+            <input class="form-control w-100 mt-1" name="price" required>
+        </div>
+        <p>どちらの積立方法を検討していますか？ - 1. 月々いくら貯金
+            「月々いくらまでなら支払えるか」を入力して頂き、そこから商品単価を考慮し、「目標達成日」を算出します。
+            2. いつまで貯金
+            「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」を算出します。</p>
+        <div>
+            <input class="form-control" type="radio" name="type" id="every" required> 
+            <label for="every">毎月の積立金額を決める（月々いくら貯金）</label>
+            <input class="form-control" type="radio" name="type" id="end" required> 
+            <label for="end">積立達成の目標日を決める（いつまで貯金）</label>
         </div>
         <input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
