--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 
         $(function () {
             $('input[name="type"]').change(function (e) {
-                const val = $(this).val;
-                console.log(val);
+                const val = $(this).val();
                 if (val === 'every') {
                     $('#amountOfMoney').css('display', 'block');
                     $('#endDate').css('display', 'none');
