--- a/index.html
+++ b/index.html
@@ -76,17 +76,21 @@
             $('form').submit(function (e) {
                 e.preventDefault();
                 liff.getProfile().then(function (profile) {
-                    let msg = '';
+                    let msg = {};
                     const url = $('input[name="url"]').val();
                     const price = $('input[name="price"]').val();
                     const type = $('input[name="type"]').val();
-                    msg += `name=${profile.displayName}&userId=${profile.userId}&url=${url}&price=${price}&type=${type}&`;
+                    msg.url = url;
+                    msg.price = price;
+                    msg.type = type;
+                    msg.name = profile.displayName;
+                    msg.userId = profile.userId;
                     if (type === 'every') {
                         const amountOfMoney = $('input[name="amountOfMoney"]').val();
-                        msg += `amountOfMoney=${amountOfMoney}`
+                        msg.amountOfMoney = amountOfMoney;
                     } else if (type === 'end') {
                         const endDate = $('input[name="endDate"]').val();
-                        msg += `endDate=${endDate}`;
+                        msg.endDate = endDate;
                     }
                     window.alert(msg);
                     $.ajax({
@@ -96,7 +100,7 @@
                             'Accept': 'application/json',
                             'Content-Type': 'application/x-www-form-urlencoded',
                         },
-                        data: msg
+                        data: JSON.stringify(msg)
                     }).then(function () {
                         liff.closeWindow();
                         return false;
