--- a/index.html
+++ b/index.html
@@ -76,31 +76,26 @@
             $('form').submit(function (e) {
                 e.preventDefault();
                 liff.getProfile().then(function (profile) {
-                    let msg = {};
+                    let msg = '';
                     const url = $('input[name="url"]').val();
                     const price = $('input[name="price"]').val();
                     const type = $('input[name="type"]').val();
-                    msg.url = url;
-                    msg.price = price;
-                    msg.type = type;
-                    msg.name = profile.displayName;
-                    msg.userId = profile.userId;
+                    msg += `name=${profile.displayName}&userId=${profile.userId}&url=${url}&price=${price}&type=${type}&`;
                     if (type === 'every') {
                         const amountOfMoney = $('input[name="amountOfMoney"]').val();
-                        msg.amountOfMoney = amountOfMoney;
+                        msg += `amountOfMoney=${amountOfMoney}`
                     } else if (type === 'end') {
                         const endDate = $('input[name="endDate"]').val();
-                        msg.endDate = endDate;
+                        msg += `endDate=${endDate}`;
                     }
                     window.alert(msg);
                     $.ajax({
-                        url: 'https://script.google.com/macros/s/AKfycbx_FxJ6AVf1_xIdKL5vA0qcfokgeobWOOW1ZSoHu_nJcpUxBwnQSwSRL0r8WIXT7Q-e/exec',
+                        url: `https://script.google.com/macros/s/AKfycbx_FxJ6AVf1_xIdKL5vA0qcfokgeobWOOW1ZSoHu_nJcpUxBwnQSwSRL0r8WIXT7Q-e/exec?${msg}`,
                         method: 'post',
                         headers: {
                             'Accept': 'application/json',
                             'Content-Type': 'application/x-www-form-urlencoded',
                         },
-                        data: JSON.stringify(msg)
                     }).then(function () {
                         liff.closeWindow();
                         return false;
