--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
         <div id="amountOfMoney">
             <p>毎月積立てを行う金額を入力してください（半角数字, 例：5000）</p>
-            <input type="number" class="form-control w-100 mt-1" name="amountOfMoney" required>
+            <input id="amountOfMoneyForm" type="number" class="form-control w-100 mt-1" name="amountOfMoney">
         </div>
         <div id="endDate">
             <p>積立てを完了させたい日付を入力して下さい - 積立期間は最低2ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
-            <input type="date" class="form-control w-100 mt-1" name="endDate">
+            <input id=""endDateForm type="date" class="form-control w-100 mt-1" name="endDate">
         </div>
         <input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
@@ -50,6 +50,7 @@
             const liffId = "1657664942-ayvy63nv";
             initializeLiff(liffId);
             $('#endDate').css('display', 'none');
+            $('#amountOfMoneyForm').attr('required', true)
         })
 
         function initializeLiff(liffId) {
@@ -67,10 +68,14 @@
                 const val = $(this).val();
                 if (val === 'every') {
                     $('#amountOfMoney').css('display', 'block');
+                    $('#amountOfMoneyForm').attr('required', true)
                     $('#endDate').css('display', 'none');
+                    $('#endDateForm').attr('required', false);
                 } else if (val === 'end') {
                     $('#amountOfMoney').css('display', 'none');
+                    $('#amountOfMoneyForm').attr('required', false)
                     $('#endDate').css('display', 'block');
+                    $('#endDateForm').attr('required', true);
                 }
             })
             $('form').submit(function (e) {
