--- a/index.html
+++ b/index.html
@@ -19,25 +19,29 @@
         <div>
             <input type="number" class="form-control w-100 mt-1" name="price" required>
         </div>
-        <p>どちらの積立方法を検討していますか？ - 1. 月々いくら貯金
+        <p class="mt-3">どちらの積立方法を検討していますか？ <br />1. 月々いくら貯金
             「月々いくらまでなら支払えるか」を入力して頂き、そこから商品単価を考慮し、「目標達成日」を算出します。
-            2. いつまで貯金
+            <br />2. いつまで貯金
             「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」を算出します。</p>
-        <div>
-            <input class="form-control" type="radio" name="type" id="every" value="every" required> 
-            <label for="every">毎月の積立金額を決める（月々いくら貯金）</label>
-            <input class="form-control" type="radio" name="type" id="end" value="end" required> 
-            <label for="end">積立達成の目標日を決める（いつまで貯金）</label>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="type" id="every" value="every" required> 
+            <label class="form-check-label" for="every">毎月の積立金額を決める（月々いくら貯金）</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="type" id="end" value="end" required> 
+            <label class="form-check-label" for="end">積立達成の目標日を決める（いつまで貯金）</label>
         </div>
         <div id="amountOfMoney">
-            <p>毎月積立てを行う金額を入力してください（半角数字, 例：5000）</p>
+            <p class="mt-3">毎月積立てを行う金額を入力してください（半角数字, 例：5000）</p>
             <input id="amountOfMoneyForm" type="number" class="form-control w-100 mt-1" name="amountOfMoney">
         </div>
         <div id="endDate">
-            <p>積立てを完了させたい日付を入力して下さい - 積立期間は最低2ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
+            <p class="mt-3">積立てを完了させたい日付を入力して下さい - 積立期間は最低2ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
             <input id=""endDateForm type="date" class="form-control w-100 mt-1" name="endDate">
         </div>
-        <input type="submit" class="mt-4 btn btn-primary" value="送信">
+        <div class="text-center">
+            <input type="submit" class="mt-4 btn btn-primary" value="送信">
+        </div>
     </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -95,7 +99,6 @@
                         const endDate = $('input[name="endDate"]').val();
                         msg += `endDate=${endDate.toString()}`;
                     }
-                    window.alert(msg);
                     $.ajax({
                         url: `https://script.google.com/macros/s/AKfycbxpytDNcQabbllpUgPPBb_TaQXxIYwP_O8_7Wl7yOTTHZxG8ucnIpY3ZLx8ULsV61eG/exec?${msg}`,
                         method: 'post',
