--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input id="amountOfMoneyForm" type="number" class="form-control w-100 mt-1" name="amountOfMoney">
         </div>
         <div id="endDate">
-            <p class="mt-3">積立てを完了させたい日付を入力して下さい - 積立期間は最低2ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
+            <p class="mt-3">積立てを完了させたい日付を入力して下さい - 積立期間は最低3ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
             <input id=""endDateForm type="date" class="form-control w-100 mt-1" name="endDate">
         </div>
         <div class="text-center">
@@ -70,7 +70,6 @@
         $(function () {
             $('input[name="type"]').change(function (e) {
                 const val = $(this).val();
-                console.log(val);
                 if (val === 'every') {
                     $('#amountOfMoney').css('display', 'block');
                     $('#amountOfMoneyForm').attr('required', true)
@@ -85,18 +84,23 @@
             })
             $('form').submit(function (e) {
                 e.preventDefault();
+                const url = $('input[name="url"]').val();
+                const price = $('input[name="price"]').val();
+                const type = $('input[name="type"]:checked').val();
+                const amountOfMoney = $('input[name="amountOfMoney"]').val();
+                const endDate = new Date($('input[name="endDate"]').val());
+                const now = new Date();
+                if (type === 'end' && (endDate.getFullYear() - now.getFullYear()) * 12 + (endDate.getMonth() - now.getMonth()) + 1 <= 2) {
+                    alert('積立期間は最低3ヶ月以上必要です。')
+                    return;
+                }
                 try {
                     liff.getProfile().then(function (profile) {
                         let msg = '';
-                        const url = $('input[name="url"]').val();
-                        const price = $('input[name="price"]').val();
-                        const type = $('input[name="type"]:checked').val();
                         msg += `name=${profile.displayName}&userId=${profile.userId}&url=${url}&price=${price}&type=${type}&`;
                         if (type === 'every') {
-                            const amountOfMoney = $('input[name="amountOfMoney"]').val();
                             msg += `amountOfMoney=${amountOfMoney}`
                         } else if (type === 'end') {
-                            const endDate = $('input[name="endDate"]').val();
                             msg += `endDate=${endDate.toString()}`;
                         }
                         $.ajax({
