--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input id=""endDateForm type="date" class="form-control w-100 mt-1" name="endDate">
         </div>
         <div class="text-center">
-            <input type="submit" class="mt-4 btn btn-primary" value="送信">
+            <input id="submit" type="submit" class="mt-4 btn btn-primary" value="送信">
         </div>
     </form>
 
@@ -83,6 +83,7 @@
                 }
             })
             $('form').submit(function (e) {
+                $('#submit').prop('disabled', true);
                 e.preventDefault();
                 const url = $('input[name="url"]').val();
                 const price = $('input[name="price"]').val();
