--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <form class="w-75 mx-auto">
-        <p class="mt-3">購入を検討している商品のURL - 購入を検討している商品のURLの添付をお願いいたします。
+        <p class="mt-3">購入を検討している商品のURLの添付をお願いいたします。
             （amazonや楽天などで販売されている商品のリンクの添付をお願いいたします。）</p>
         <div>
             <input class="form-control w-100 mt-1" name="url" placeholder="" required>
@@ -19,9 +19,9 @@
         <div>
             <input type="number" class="form-control w-100 mt-1" name="price" required>
         </div>
-        <p class="mt-3">どちらの積立方法を検討していますか？ <br />1. 月々いくら貯金
+        <p class="mt-3">どちらの積立方法を検討していますか？ <br /><strong>1. 月々いくら貯金</strong><br />
             「月々いくらまでなら支払えるか」を入力して頂き、そこから商品単価を考慮し、「目標達成日」を算出します。
-            <br />2. いつまで貯金
+            <br /><strong>2. いつまで貯金</strong><br />
             「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」を算出します。</p>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="type" id="every" value="every" required> 
