fix sentence again

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div>
             <input class="form-control w-100 mt-1" name="url" placeholder="" required>
         </div>
-        <p class="mt-3">購入を検討している商品の金額を入力してください - カンマ入れずに入力をお願い致します。（半角数字, 例：50000）</p>
+        <p class="mt-3">購入を検討している商品の金額を入力してください。カンマ入れずに入力をお願い致します。（半角数字, 例：50000）</p>
         <div>
             <input type="number" class="form-control w-100 mt-1" name="price" required>
         </div>
         <p class="mt-3">どちらの積立方法を検討していますか？ <br /><strong>1. 月々いくら貯金</strong><br />
-            「月々いくらまでなら支払えるか」を入力して頂き、そこから商品単価を考慮し、「目標達成日」を算出します。
+            「月々いくらまでなら支払えるか」を入力して頂き、そこから商品単価を考慮し、「目標達成日」をシミュレーションします。
             <br /><strong>2. いつまで貯金</strong><br />
-            「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」を算出します。</p>
+            「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」をシミュレーションします。</p>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="type" id="every" value="every" required> 
             <label class="form-check-label" for="every">毎月の積立金額を決める（月々いくら貯金）</label>
@@ -36,7 +36,7 @@
             <input id="amountOfMoneyForm" type="number" class="form-control w-100 mt-1" name="amountOfMoney">
         </div>
         <div id="endDate">
-            <p class="mt-3">積立てを完了させたい日付を入力して下さい - 積立期間は最低3ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
+            <p class="mt-3">積立てを完了させたい日付を入力して下さい。積立期間は最低3ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
             <input id=""endDateForm type="date" class="form-control w-100 mt-1" name="endDate">
         </div>
         <div class="text-center">
