--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 </head>
 <body>
 
-    <form class="w-75 mx-auto">
+    <div class="w-75 mt-3 mx-auto card">
+      <div class="card-header font-weight-bold text-center">
+        いくらキャッシュバックが<br>もらえるのか知る
+      </div>
+      <div class="card-body">
+        <p class="card-text">このサービスを利用することでいくらお得に購入できるのかを把握することが出来ます。<br>
+        フォームを送信すると、LINEのメッセージ上で月々の積立額と積立を達成した際のキャッシュバックの金額が表示されます。</p>
+      </div>
+      <div class="card-footer text-muted">
+        ※無料でお試し頂けます。
+      </div>
+    </div>
+
+    <form id="simulation-form" class="w-75 mx-auto">
         <p class="mt-3">積立シミュレーションしたい商品名をご記入ください。</p>
         <div>
             <input class="form-control w-100 mt-1" name="url" placeholder="" required>
         </div>
-        <p class="mt-3">購入を検討している商品の金額を入力してください。カンマ入れずに入力をお願い致します。（半角数字, 例：50000）</p>
+        <p class="mt-3">購入を検討している商品の金額(税込)を入力してください。カンマ入れずに入力をお願い致します。（半角数字, 例：50000）</p>
         <div>
             <input type="number" class="form-control w-100 mt-1" name="price" required>
         </div>
@@ -23,11 +36,11 @@
             <br /><strong>2. いつまで貯金</strong><br />
             「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」をシミュレーションします。</p>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="type" id="every" value="every" required> 
+            <input class="form-check-input" type="radio" name="type" id="every" value="every" required>
             <label class="form-check-label" for="every">毎月の積立金額を決める（月々いくら貯金）</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="type" id="end" value="end" required> 
+            <input class="form-check-input" type="radio" name="type" id="end" value="end" required>
             <label class="form-check-label" for="end">積立達成の目標日を決める（いつまで貯金）</label>
         </div>
         <div id="amountOfMoney">
