--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
 </head>
 <body>
-
+    
     <div class="w-75 mt-3 mx-auto card">
       <div class="card-header font-weight-bold text-center">
-        いくらキャッシュバックが<br>もらえるのか知る
+        積立購入シミュレーション
       </div>
       <div class="card-body">
-        <p class="card-text">このサービスを利用することでいくらお得に購入できるのかを把握することが出来ます。<br>
-        フォームを送信すると、LINEのメッセージ上で月々の積立額と積立を達成した際のキャッシュバックの金額が表示されます。</p>
+        <p class="card-text">
+          このサービスを利用することでいくらお得に購入できるのかを把握することが出来ます。<br>
+          フォームを送信すると、LINEのメッセージ上で月々の積立額と積立を達成した際のキャッシュバックの金額が表示されます。
+        </p>
       </div>
       <div class="card-footer text-muted">
         ※無料でお試し頂けます。
@@ -23,32 +25,47 @@
     </div>
 
     <form id="simulation-form" class="w-75 mx-auto">
-        <p class="mt-3">積立シミュレーションしたい商品名をご記入ください。</p>
+        <p class="mt-3">現在購入を検討している商品名をご記入ください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="url" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="item_name" placeholder="商品名を記入" required>
         </div>
-        <p class="mt-3">購入を検討している商品の金額(税込)を入力してください。カンマ入れずに入力をお願い致します。（半角数字, 例：50000）</p>
+        <p class="mt-3">商品のカテゴリーを選んで下さい。</p>
+        <div class="input-group mb-3">
+            <select class="custom-select" id="inputGroupSelect01" name="item_category" required>
+                <option selected value="家電・AV家電・カメラ">家電・AV家電・カメラ</option>
+                <option value="美容家電">美容家電</option>
+                <option value="パソコン・周辺機器">パソコン・周辺機器</option>
+                <option value="家具">家具</option>
+                <option value="衣服・靴">衣服・靴</option>
+                <option value="アクセサリー">アクセサリー</option>
+                <option value="アウトドア">アウトドア</option>
+                <option value="車・バイク">車・バイク</option>
+                <option value="楽器・音響機器">楽器・音響機器</option>
+                <option value="その他">その他</option>
+            </select>
+        </div>
+        <p class="mt-3">商品の金額を入力してください。カンマ入れずに入力をお願い致します。</p>
         <div>
-            <input type="number" class="form-control w-100 mt-1" name="price" required>
+            <input type="number" class="form-control w-100 mt-1" name="price" placeholder="半角数字, 例: 50000" required>
         </div>
         <p class="mt-3">どちらの積立方法を検討していますか？ <br /><strong>1. 月々いくら貯金</strong><br />
-            「月々いくらまでなら支払えるか」を入力して頂き、そこから商品単価を考慮し、「目標達成日」をシミュレーションします。
+            「月々いくらまでなら支払えるか」を入力して頂き、「目標達成日」をシミュレーションします。
             <br /><strong>2. いつまで貯金</strong><br />
-            「いつまでに欲しいか」を入力して頂き、そこから商品単価を考慮し、「月々の積立金額」をシミュレーションします。</p>
+            「いつまでに欲しいか」を入力して頂き、「月々の積立金額」をシミュレーションします。</p>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="type" id="every" value="every" required>
-            <label class="form-check-label" for="every">毎月の積立金額を決める（月々いくら貯金）</label>
+            <label class="form-check-label" for="every">月々いくら貯金（毎月の積立金額を決める）</label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="type" id="end" value="end" required>
-            <label class="form-check-label" for="end">積立達成の目標日を決める（いつまで貯金）</label>
+            <label class="form-check-label" for="end">いつまで貯金（積立達成の目標日を決める）</label>
         </div>
         <div id="amountOfMoney">
             <p class="mt-3">毎月積立てを行う金額を入力してください（半角数字, 例：5000）</p>
             <input id="amountOfMoneyForm" type="number" class="form-control w-100 mt-1" name="amountOfMoney">
         </div>
         <div id="endDate">
-            <p class="mt-3">積立てを完了させたい日付を入力して下さい。積立期間は最低3ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
+        <p class="mt-3">積立てを完了させたい日付を入力して下さい。積立期間は最低3ヶ月以上からになります。後からでも変更可能ですので、ご安心くださいませ。</p>
             <input id=""endDateForm type="date" class="form-control w-100 mt-1" name="endDate">
         </div>
         <div class="text-center">
