--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 try {
                     liff.getProfile().then(function (profile) {
                         let msg = '';
+                        // source
                         msg += `name=${profile.displayName}&userId=${profile.userId}&itemName=${itemName}&itemCategory=${itemCategory}&price=${price}&type=${type}&source=simulation&`;
                         if (type === 'every') {
                             msg += `amountOfMoney=${amountOfMoney}`
